# chatapp

./: Cargo.toml  docker-compose.yaml
src/: commands.rs  main.rs  websocket.rs
src/adapters/: base.rs  channel_repository.rs  contact_repository.rs  database.rs  message_repository.rs  mod.rs
src/adapters/in_memory/: repository.rs
src/adapters/mongo/: database.rs  repository.rs
src/api/: contacts.rs
src/models/: channel.rs  contact.rs  message.rs  mod.rs
src/services/: channel_handlers.rs  contact_handlers.rs  message_handlers.rs  mod.rs
